# goalproof-Superteam-Hackathon

./: .env.example  .gitignore  README.md
demo/: script.md
docs/: submission-form.md  txline-feedback-log.md
docs/brief/: Prediction Market and Settlement.txt  consumer and fan exp.txt
docs/presentation/: goalproof-deck.html
ingestion/: go.mod  main.go  record-live.cmd  record.go  txline.go
keeper/: .gitignore  README.md  package-lock.json  package.json
keeper/idl/: goalproof.json
keeper/src/: activate-txline.ts  create-market.ts  demo-state.ts  discover-accounts.ts  env.ts  fetch-idl.ts  goalproof-client.ts  list-fixtures.ts  market-catalog.ts  resolve.ts  setup-mint.ts  take-position.ts  txline-api.ts
program/: Anchor.toml  README.md
program/programs/goalproof/: Cargo.toml
program/programs/goalproof/src/: lib.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Landing.tsx  config.ts  index.css  main.tsx
web/src/components/: Flag.tsx  MarketCard.tsx  MatchHeader.tsx  MatchTheater.tsx  ReplayBar.tsx
web/src/data/: adapter.ts  catalog.ts  markets.ts  onchain.ts  timeline.ts
web/src/replay/: useReplay.ts
